--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 
 <body>
 
+    <!-- Preloader -->
+    <div class="preloader">
+        <div class="loader-content">
+            <div class="loader-logo">
+                <i class="ph-fill ph-squares-four"></i> CLOUDRIFY
+            </div>
+            <div class="loader-progress-container">
+                <div class="loader-progress-bar"></div>
+            </div>
+            <div class="loader-percentage">0%</div>
+        </div>
+    </div>
+
     <!-- Navigation -->
     <nav class="navbar">
         <div class="logo">
